--- a/index.html
+++ b/index.html
@@ -1,3 +1,157 @@
-<p>Hello 大家好</p>
-<p>我是chx，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Huixuan Chi (迟 慧璇)</title>
+    <link rel="stylesheet" href="jemdoc.css" type="text/css" />
+</head>
+
+<div id="layout-content">
+    <div id="toptitle">
+        <h1>Huixuan Chi (迟 慧璇)</h1>
+    </div>
+    <table class="imgtable">
+        <tr>
+            <td>
+                <img src="self.jpg" alt="400px" width="400px" height="IMGLINKTARGET" />&nbsp;</td>
+            <td align="left"></td>
+        </tr>
+    </table>
+    <p>
+        我目前是中科院计算所-高通量计算机研究中心的一名硕士研究生。我对图神经⽹络（GNN）和 PyTorch Geometric（PyG）感兴趣。
+    </p>
+    <!-- <p>
+        <br /> </p> -->
+    <p>我是围棋业余5段，国家⼆级运动员，逻辑思维和计算能⼒较强。</p>
+    <!-- <p>[<a href="https://drive.google.com/file/d/1-VyiekWVpXDz89r1kAM8_hK3QOQJltHT/view?usp=sharing">CV</a>] [<a
+            href="https://scholar.google.co.jp/citations?user=wAFMjfkAAAAJ&amp;hl=ja">Google
+            Scholar</a>]</p> -->
+    <ul>
+        <li>
+            <p><a href="https://blog.csdn.net/weixin_41650348">[CSDN技术博客]</a></p>
+        </li>
+        <li>
+            <p><a href="https://github.com/ytchx1999">[Github]</a></p>
+        </li>
+        <li>
+            <p><a href="https://www.zhihu.com/people/zhi-hui-de-xuan-feng">[知乎]</a></p>
+        </li>
+    </ul>
+    <h2>教育背景</h2>
+    <h3>中国科学院计算技术研究所 - 计算机系统结构 - 硕⼠</h3>
+    <ul>
+        <li>
+            <p>2021.09 ~ 2024.07</p>
+        </li>
+        <li>
+            <p>导师：郝沁汾老师</p>
+        </li>
+        <li>
+            <p>研究⽅向：图计算体系结构、图神经⽹络</p>
+        </li>
+    </ul>
+    <h3>华北电力大学 - 计算机科学与技术 - 本科</h3>
+    <ul>
+        <li>
+            <p>2017.09 ~ 2021.07</p>
+        </li>
+        <li>
+            <p>GPA：4.4 / 5.0（专业前1%）</p>
+        </li>
+        <li>
+            <p>排名：1 / 200（2017-2018），1 / 58（2018-2019），1 / 62（2019-2020）</p>
+        </li>
+        <li>
+            <p>CET-4（607），CET-6（538）</p>
+        </li>
+    </ul>
+    <h2>⼯作与实习经历</h2>
+    <h3>北京字节跳动科技有限公司 - Data-AML-应⽤算法-算法实习⽣</h3>
+    <ul>
+        <li>
+            <p>2021.07 ~ 2021.09</p>
+        </li>
+        <li>
+            <p>负责图机器学习相关research⼯作，对Graphormer进⾏调研和消融实验</p>
+        </li>
+        <li>
+            <p>参与OGB冲榜</p>
+        </li>
+        <ol>
+            <li>在<a
+                    href="https://ogb.stanford.edu/docs/leader_nodeprop/#ogbn-products">OGBN-Products</a>排⾏榜中，Spec-MLP-Wide+C&S模型当时达到榜⼀
+            </li>
+            <li>在<a
+                    href="https://ogb.stanford.edu/docs/leader_graphprop/#ogbg-molhiv">OGBG-Molhiv</a>排⾏榜中，Graphormer+FPs模型当时达到榜三
+            </li>
+        </ol>
+    </ul>
+
+    <h2>科研和项⽬经历</h2>
+    <h3>图神经⽹络（GNN）研究与OGB冲榜赛</h3>
+    <ul>
+        <li>
+            <p>2021.02 ~ 2021.05</p>
+        </li>
+        <li>
+            <p>针对GNN模型在实践中存在的不⾜，对GNN节点分类任务中的Tricks进⾏探索，以提升模型精度。</p>
+        </li>
+        <li>
+            <p>提出了GCN_res Framework和Embedding Usage这两种应⽤于GNN的新Tricks。</p>
+        </li>
+        <li>
+            <p>以⼤型真实的OGB数据集作为评价依据，并参加了OGB数据集的冲榜赛。</p>
+        </li>
+        <ol>
+            <li>在<a
+                    href="https://ogb.stanford.edu/docs/leader_nodeprop/#ogbn-arxiv">OGBN-Arxiv</a>排⾏榜中，GAT-node2vec+BoT+self-KD模型当时达到榜⼆。
+            </li>
+            <li>在<a
+                    href="https://ogb.stanford.edu/docs/leader_nodeprop/#ogbn-mag">OGBN-Mag</a>排⾏榜中，R-GSN+metapath2vec模型当时达到榜三。
+            </li>
+            <li>在<a
+                    href="https://ogb.stanford.edu/docs/leader_nodeprop/#ogbn-proteins">OGBN-Proteins</a>排⾏榜中，GAT+labels+node2vec模型当时达到榜⼀。
+            </li>
+        </ol>
+        <li>
+            <p><a href="https://arxiv.org/abs/2105.08330">[论⽂]</a>：International Conference on Computer, Big Data and
+                Artificial Intelligence (ICCBDAI 2021)</p>
+        </li>
+        <li>
+            <p><a href="https://github.com/ytchx1999/PyG-OGB-Tricks">[代码]</a> | <a
+                    href="https://ogb.stanford.edu/docs/leader_nodeprop/">[OGB节点分类排⾏榜]</a></p>
+        </li>
+    </ul>
+
+
+
+    <h2>荣誉奖项</h2>
+    <ul>
+        <li>
+            <p> 国家奖学金 (2019-2020)</p>
+        </li>
+        <li>
+            <p> 国家奖学金 (2018-2019)</p>
+        </li>
+        <li>
+            <p> 国家奖学金 (2017-2018)</p>
+        </li>
+    </ul>
+
+    <h2>联系方式</h2>
+    <p>Phone: 133-6136-1876 <br>
+        Email: chihuixuan21@mails.ucas.ac.cn <br />
+        <!-- URL: <a href="http://web.stanford.edu/~weihuahu/">http://web.stanford.edu/~weihuahu/</a> <br /> -->
+        Github: <a href="https://github.com/ytchx1999/">https://github.com/ytchx1999/</a></p>
+    <!-- <div id="footer">
+        <div id="footer-text">
+            Page generated 2021-07-12 12:46:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+        </div>
+    </div> -->
+</div>
+</body>
+
+</html>
