--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 
 <div id="layout-content">
     <div id="toptitle">
-        <h1>Huixuan Chi (迟 慧璇)</h1>
+        <h1>Huixuan Chi (迟慧璇)</h1>
     </div>
-    <table class="imgtable">
+    <!-- <table class="imgtable">
         <tr>
             <td>
-                <img src="self.jpg" alt="400px" width="400px" height="IMGLINKTARGET" />&nbsp;</td>
+                <img src="self.jpg" alt="200px" width="200px" height="IMGLINKTARGET" />&nbsp;</td>
             <td align="left"></td>
         </tr>
-    </table>
+    </table> -->
     <p>
-        我目前是中科院计算所-高通量计算机研究中心的一名硕士研究生。我对图神经⽹络（GNN）和 PyTorch Geometric（PyG）感兴趣。
+        <!-- <br> -->
+        我是迟慧璇，目前是中科院计算所的二年级硕士研究生（2024届），正在准备秋招找工作，欢迎联系（wx：13361361876）。
     </p>
     <!-- <p>
         <br /> </p> -->
-    <p>我是围棋业余5段，国家⼆级运动员，逻辑思维和计算能⼒较强。</p>
+    <!-- <p>我是围棋业余5段，国家⼆级运动员，逻辑思维和计算能⼒较强。</p> -->
     <!-- <p>[<a href="https://drive.google.com/file/d/1-VyiekWVpXDz89r1kAM8_hK3QOQJltHT/view?usp=sharing">CV</a>] [<a
             href="https://scholar.google.co.jp/citations?user=wAFMjfkAAAAJ&amp;hl=ja">Google
             Scholar</a>]</p> -->
@@ -37,7 +38,10 @@
             <p><a href="https://github.com/ytchx1999">[Github]</a></p>
         </li>
         <li>
-            <p><a href="https://www.zhihu.com/people/zhi-hui-de-xuan-feng">[知乎]</a></p>
+            <p><a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=mSLoo54AAAAJ">[Google Scholar]</a></p>
+        </li>
+        <!-- <li>
+            <p><a href="https://www.zhihu.com/people/zhi-hui-de-xuan-feng">[知乎]</a></p> -->
         </li>
     </ul>
     <h2>教育背景</h2>
@@ -47,10 +51,13 @@
             <p>2021.09 ~ 2024.07</p>
         </li>
         <li>
-            <p>导师：郝沁汾老师</p>
+            <p>GPA：3.70 / 4.0</p>
         </li>
         <li>
-            <p>研究⽅向：图计算体系结构、图神经⽹络</p>
+            <p>导师：郝沁汾研究员</p>
+        </li>
+        <li>
+            <p>研究⽅向：动态图（Dynamic Graph）、本地生活推荐（Life Service）</p>
         </li>
     </ul>
     <h3>华北电力大学 - 计算机科学与技术 - 本科</h3>
@@ -59,39 +66,53 @@
             <p>2017.09 ~ 2021.07</p>
         </li>
         <li>
-            <p>GPA：4.4 / 5.0（专业前1%）</p>
+            <p>GPA：4.4 / 5.0</p>
         </li>
         <li>
             <p>排名：1 / 200（2017-2018），1 / 58（2018-2019），1 / 62（2019-2020）</p>
         </li>
         <li>
-            <p>CET-4（607），CET-6（538）</p>
+            <p>英语：CET-4（607），CET-6（538）</p>
         </li>
     </ul>
-    <h2>⼯作与实习经历</h2>
-    <h3>北京字节跳动科技有限公司 - Data-AML-应⽤算法-算法实习⽣</h3>
+    <h2>实习经历</h2>
+    <h3>【字节跳动】抖音视界有限公司-算法实习生</h3>
+    <ul>
+        <!-- <li> -->
+            <p>Data-风控-风控研发-生活服务风控，2023.05 ~ 至今</p>
+        <!-- </li> -->
+        <li>
+            <p>抖音生活服务评价风控的业务落地工作。</p>
+        </li>
+    </ul>
+    <h3>【美团】北京三快在线科技有限公司-算法实习生</h3>
+    <ul>
+        <!-- <li> -->
+        <p>美团平台-搜索推荐算法部-NLP中心-图学习组，2021.12 ~ 2023.04</p>
+        <!-- </li> -->
+        <li>
+            <p>动态图与本地生活服务推荐（美团到餐场景）的研究工作：产出论文3篇，专利1篇。</p>
+        </li>
+        <li>
+            <p>图风控业务的落地工作：基于GNN的异常订单检测，相关方法集成到美团平台图学习框架Tulong2中。</p>
+        </li>
+    </ul>
+    <h3>【字节跳动】北京字节跳动网络技术有限公司-算法实习生</h3>
     <ul>
         <li>
-            <p>2021.07 ~ 2021.09</p>
+            <p>Data-AML-应用算法组，2021.07 ~ 2021.09</p>
         </li>
         <li>
-            <p>负责图机器学习相关research⼯作，对Graphormer进⾏调研和消融实验</p>
+            <p>Graph Transformer的研究工作，参与OGB刷榜，当时两个榜单分别刷到榜1和榜3。</p>
         </li>
-        <li>
-            <p>参与OGB冲榜</p>
-        </li>
-        <ol>
-            <li>在<a
-                    href="https://ogb.stanford.edu/docs/leader_nodeprop/#ogbn-products">OGBN-Products</a>排⾏榜中，Spec-MLP-Wide+C&S模型当时达到榜⼀
-            </li>
-            <li>在<a
-                    href="https://ogb.stanford.edu/docs/leader_graphprop/#ogbg-molhiv">OGBG-Molhiv</a>排⾏榜中，Graphormer+FPs模型当时达到榜三
-            </li>
-        </ol>
     </ul>
 
-    <h2>科研和项⽬经历</h2>
-    <h3>图神经⽹络（GNN）研究与OGB冲榜赛</h3>
+    <h2>论文和专利</h2>
+    coming soon
+
+    <h2>项⽬经历</h2>
+    coming soon
+    <!-- <h3>图神经⽹络（GNN）研究与OGB冲榜赛</h3>
     <ul>
         <li>
             <p>2021.02 ~ 2021.05</p>
@@ -124,8 +145,37 @@
             <p><a href="https://github.com/ytchx1999/PyG-OGB-Tricks">[代码]</a> | <a
                     href="https://ogb.stanford.edu/docs/leader_nodeprop/">[OGB节点分类排⾏榜]</a></p>
         </li>
-    </ul>
+    </ul> -->
 
+    <h2>榜单和比赛</h2>
+    <h3>DGraph-Fin榜单（Rank2）</h3>
+    <ul>
+        <li>
+            <p>DGraph-Fin是由浙江大学和信也科技共同推出的动态金融社交网络榜单，包括300w+节点和400w+边，其目标是检测异常
+                用户。我们使用了一个两阶段的动态图模型：首先使用无监督的方式进行预训练，接着在下游根据节点标签对模型参数进行
+                微调。在DGraph-Fin榜单中，我们的TGN-no-mem模型当时达到榜2。</p>
+        </li>
+    </ul>
+    <h3>OGB榜单（节点分类Rank1、链接预测Rank1、图分类Rank3）</h3>
+    <ul>
+        <li>
+            <p>OGB是由斯坦福大学等大学推出的大型图机器学习benchmark，它的常规榜单主要包括节点分类、链接预测和图分类任
+                务。我们刷榜的工作主要是在不同任务中对图中的节点特征进行增强。</p>
+        </li>
+        <li>
+            <p>在节点分类ogbn-products榜单中，我们的Spec-MLP-Wide+C&S模型在当时刷到榜1。在链接预测ogbl-vessel榜单中，
+                我们的SEAL(no-xfeat)模型在当时刷到了榜1。在图分类ogbg-molhiv榜单中，我们的Graphormer+FPs模型在当时刷到
+                了榜3。此外，在论文4中，我们进一步总结了一些GNN节点分类的提点技巧。</p>
+        </li>
+    </ul>
+    <h3>MAXP-DGL图机器学习大赛（Rank6/200）</h3>
+    <ul>
+        <li>
+            <p>MAXP-DGL图机器学习大赛是由中国信通院和亚马逊DGL团队联合主办的比赛。比赛数据集是一个学术引文网络，包括
+                500w+节点和4800w+边，其目标是一个节点多分类任务。我们设计了一套集成的Scalable-GNN的方案，在最终的B榜测
+                试集中，我们队伍（Graph@ICT）获得了第6名的成绩。</p>
+        </li>
+    </ul>
 
 
     <h2>荣誉奖项</h2>
@@ -143,9 +193,9 @@
 
     <h2>联系方式</h2>
     <p>Phone: 133-6136-1876 <br>
-        Email: chihuixuan21@mails.ucas.ac.cn <br />
+        Email: chihuixuan21s@ict.ac.cn <br />
         <!-- URL: <a href="http://web.stanford.edu/~weihuahu/">http://web.stanford.edu/~weihuahu/</a> <br /> -->
-        Github: <a href="https://github.com/ytchx1999/">https://github.com/ytchx1999/</a></p>
+        <!-- Github: <a href="https://github.com/ytchx1999/">https://github.com/ytchx1999/</a></p> -->
     <!-- <div id="footer">
         <div id="footer-text">
             Page generated 2021-07-12 12:46:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
