--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
     </ul>
 
 
-    <h2>荣誉奖项</h2>
+    <h2>其他</h2>
     <ul>
         <li>
-            <p> 国家奖学金 (2019-2020)</p>
+            <p> 常用语言：Python, PyTorch, PyG, DGL, Hive-SQL, Shell。 </p>
         </li>
         <li>
-            <p> 国家奖学金 (2018-2019)</p>
+            <p> 荣誉奖项：2017-2020获得3次本科生国家奖学金。</p>
         </li>
         <li>
-            <p> 国家奖学金 (2017-2018)</p>
+            <p> 兴趣爱好：（1）围棋业余5段，前国家二级运动员；（2）对中西方哲学有一定的了解。</p>
         </li>
     </ul>
 
