--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>英语：CET-4（607），CET-6（538）</p>
         </li>
     </ul>
-    <h2>实习经历</h2>
+<!--     <h2>实习经历</h2>
     <h3>【字节跳动】抖音视界有限公司-算法实习生</h3>
     <ul>
         <!-- <li> -->
@@ -105,7 +105,7 @@
         <li>
             <p>Graph Transformer的研究工作，参与OGB刷榜，当时两个榜单分别刷到榜1和榜3。</p>
         </li>
-    </ul>
+    </ul> -->
 
     <h2>论文和专利</h2>
     coming soon
