--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             href="https://scholar.google.co.jp/citations?user=wAFMjfkAAAAJ&amp;hl=ja">Google
             Scholar</a>]</p> -->
     <ul>
-        <li>
+<!--         <li>
             <p><a href="https://blog.csdn.net/weixin_41650348">[CSDN技术博客]</a></p>
-        </li>
+        </li> -->
         <li>
             <p><a href="https://github.com/ytchx1999">[Github]</a></p>
         </li>
@@ -107,7 +107,7 @@
         </li>
     </ul> -->
 
-    <h2>论文和专利</h2>
+<!--     <h2>论文和专利</h2>
     coming soon
 
     <h2>项⽬经历</h2>
@@ -189,7 +189,7 @@
         <li>
             <p> 兴趣爱好：（1）围棋业余5段，前国家二级运动员；（2）对中西方哲学有一定的了解。</p>
         </li>
-    </ul>
+    </ul> -->
 
     <h2>联系方式</h2>
     <p>Phone: 133-6136-1876 <br>
