--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </li>
     </ul> -->
 
-    <h2>榜单和比赛</h2>
+    <!--  <h2>榜单和比赛</h2>
     <h3>DGraph-Fin榜单（Rank2）</h3>
     <ul>
         <li>
