--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p>推荐算法实习生（2021.12 ~ 2023.04）</p>
         </li>
         <li>
-            <p>工作内容：LBS推荐、动态图表示学习</p>
+            <p>工作内容：<a href="https://mp.weixin.qq.com/s/r5aPTmC-XNXQs3hH7HVzrA" target="_blank">LBS推荐、动态图表示学习</a></p>
         </li>
     </ul>
     <h3>字节跳动</h3>
