--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huixuan Chi (迟 慧璇)</title>
+    <meta name="description" content="迟慧璇">
+    <meta name="keywords" content="迟慧璇, Huixuan Chi">
+    <title>Huixuan Chi (迟慧璇)</title>
     <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 </head>
 
