--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>个人简介</h2>
     <p>
         <!-- <br> -->
-        我是迟慧璇。目前我正在从事大语言模型（Large Language Model）算法相关的工作，感兴趣的方面包括：
+        我是迟慧璇，一个AI从业者。目前我正在从事大语言模型（Large Language Model）相关的工作，感兴趣的方向包括：
     </p>
     <!-- <p>
         <br /> </p> -->
@@ -38,13 +38,13 @@
             <p><a href="https://blog.csdn.net/weixin_41650348">[CSDN技术博客]</a></p>
         </li> -->
         <li>
-            <p>大模型训练（SFT、DPO），最近在也跟进 <a href="https://github.com/huggingface/open-r1" target="_blank">GRPO和R1</a> 的复现工作 </p>
+            <p>大模型训练（SFT、DPO），近期 <a href="https://github.com/huggingface/open-r1" target="_blank">GRPO和DeepSeek-R1</a> 的复现工作 </p>
         </li>
         <li>
             <p>大模型逻辑推理（LLM Reasoning）和主动检索（Active Retrieval）在RAG中的应用</p>
         </li>
         <li>
-            <p>大模型数据选择、清洗</p>
+            <p>大模型智能体（LLM Agent）</p>
         </li>
         <li>
             <p><a href="https://github.com/ytchx1999" target="_blank">[我的Github]</a> | <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=mSLoo54AAAAJ" target="_blank">[我的谷歌学术]</a></p>
@@ -54,6 +54,7 @@
             <p><a href="https://www.zhihu.com/people/zhi-hui-de-xuan-feng">[知乎]</a></p> -->
         </li>
     </ul>
+    <p>持续学习中，欢迎交流，共同进步</p>
 
     <h2>工作经历</h2>
     <h3>理想汽车</h3>
@@ -97,7 +98,7 @@
             <p>算法实习生（2021.07 ~ 2021.09）</p>
         </li>
         <li>
-            <p>工作内容：Graph Transformer研究、OGB榜单</p>
+            <p>工作内容：Graph Transformer研究、<a href="https://ogb.stanford.edu/docs/leader_graphprop/" target="_blank">OGB榜单</a> </p>
         </li>
     </ul>
 
@@ -117,7 +118,7 @@
             <p>计算机科学与技术（2017.09 ~ 2021.07）</p>
         </li>
         <li>
-            <p>排名：1 / 200（2017-2018），1 / 58（2018-2019），1 / 62（2019-2020）</p>
+            <p>荣誉奖励：国家奖学金*3（2018、2019、2020）</p>
         </li>
     </ul>
 
@@ -125,12 +126,27 @@
     <h2>兴趣爱好</h2>
     <ul>
         <li>
-            <p> 围棋业余5段，<a href="https://mp.weixin.qq.com/s/9Ijg-5zZ8LE8irs3FmoeOA" target="_blank">北溟围棋俱乐部活跃棋手</a>，也致力于围棋的普及，偶尔在野狐下棋</p>
+            <p> 围棋业余5段，也致力于围棋的普及，过往战绩：</p>
         </li>
+        <ul>
+            <li><a href="https://mp.weixin.qq.com/s/BLpuRcI6Zh9GvQA63456WA" target="_blank">北京市大学生围棋联赛（国科大队）</a>、南北大学生围棋对抗赛（北方队）</li>
+            <li><a href="https://mp.weixin.qq.com/s/9Ijg-5zZ8LE8irs3FmoeOA" target="_blank">2024年“知行合弈杯”北溟围棋大会 - 公开组第4名</a></li>
+            <li><a href="http://www.wqjh.net/info_Show.aspx?typeid=36&id=2331&newtype=2" target="_blank">2017年北京晚报“京北围棋杯”围棋选拔赛 - 第13名</a></li>
+            <li><a href="http://www.cnypa.org/ttxw/976995.jhtml" target="_blank">第28届全国青少年宫“希望杯” 棋类比赛总决赛 - 甲组冠军</a></li>
+            <li><a href="https://blog.sina.com.cn/s/blog_4fcb87620102v0nk.html" target="_blank">2014年山东省少年围棋锦标赛总决赛 - 甲组冠军</a></li>
+            
+        </ul>
         <li>
-            <p> 喜欢推理小说，最喜欢的作家是大山诚一郎 </p>
+            <p> 喜欢推理小说，最喜欢的作家是大山诚一郎，近期书单： </p>
         </li>
+        <ul>
+            <li>《不便的便利店》、《不便的便利店2》</li>
+            <li>《诡计博物馆》、《假面山庄》</li>
+        </ul>
     </ul>
+
+    <!-- <h2>其他</h2>
+    <p>持续学习中，欢迎交流</p> -->
 
     <h2>联系方式</h2>
     <p>Phone: 133-6136-1876 <br>
