--- a/index.html
+++ b/index.html
@@ -123,8 +123,27 @@
     </ul>
 
 
-    <h2>兴趣爱好</h2>
+    <h2>围棋人生</h2>
+    <p> 围棋业余5段，享受围棋的乐趣</p>
+    <h3>近期围棋活动</h3>
     <ul>
+        <li> <a href="https://mp.weixin.qq.com/s/qEuLiVrUtkPtvdD4F38nfw" target="_blank">北溟围棋俱乐部积分赛、月赛</a></li>
+        <li><a href="https://mp.weixin.qq.com/s/BLpuRcI6Zh9GvQA63456WA" target="_blank">第12届北京市大学生围棋联赛（甲组）</a></li>
+        <li>第10届南北大学生围棋对抗赛（北方队）</li>
+        <li>阿里棋派围棋社午休活动</li>
+        <li>鹅厂2025贺岁杯线上围棋交流赛</li>
+    </ul>
+    <h3>过往比赛成绩</h3>
+    <ul>
+        <li><a href="https://mp.weixin.qq.com/s/gb3sEkQ6zj8aV6pqIPSHYA" target="_blank">第11届北京市大学生围棋联赛 - 乙组冠军（国科大队）</a></li>
+        <li><a href="https://mp.weixin.qq.com/s/9Ijg-5zZ8LE8irs3FmoeOA" target="_blank">2024年“知行合弈杯”北溟围棋大会 - 公开组第4名</a></li>
+        <li><a href="http://www.wqjh.net/info_Show.aspx?typeid=36&id=2331&newtype=2" target="_blank">2017年北京晚报“京北围棋杯”围棋选拔赛 - 第13名</a></li>
+        <li><a href="http://www.cnypa.org/ttxw/976995.jhtml" target="_blank">第28届全国青少年宫“希望杯” 棋类比赛总决赛 - 甲组冠军</a></li>
+        <li><a href="https://blog.sina.com.cn/s/blog_4fcb87620102v0nk.html" target="_blank">2014年山东省少年围棋锦标赛总决赛 - 甲组冠军</a></li>
+        
+    </ul>
+    
+    <!-- <ul>
         <li>
             <p> 围棋业余5段，也致力于围棋的普及，过往战绩：</p>
         </li>
@@ -143,7 +162,7 @@
             <li>《不便的便利店》、《不便的便利店2》</li>
             <li>《诡计博物馆》、《假面山庄》</li>
         </ul>
-    </ul>
+    </ul> -->
 
     <!-- <h2>其他</h2>
     <p>持续学习中，欢迎交流</p> -->
