--- a/index.html
+++ b/index.html
@@ -125,9 +125,13 @@
 
     <h2>围棋人生</h2>
     <p> 围棋业余5段，享受围棋的乐趣</p>
+    <ul>
+        <li><a href="https://mp.weixin.qq.com/s/XinaQAw7jZSuRhvKvFterg" target="_blank">2025年2月北溟等级分</a></li>
+    </ul>
     <h3>近期围棋活动</h3>
     <ul>
-        <li> <a href="https://mp.weixin.qq.com/s/qEuLiVrUtkPtvdD4F38nfw" target="_blank">北溟围棋俱乐部积分赛、月赛</a></li>
+        
+        <li> <a href="https://mp.weixin.qq.com/s/qEuLiVrUtkPtvdD4F38nfw" target="_blank">第3届北溟围棋俱乐部积分赛、月赛</a></li>
         <li><a href="https://mp.weixin.qq.com/s/BLpuRcI6Zh9GvQA63456WA" target="_blank">第12届北京市大学生围棋联赛（甲组）</a></li>
         <li>第10届南北大学生围棋对抗赛（北方队）</li>
         <li>阿里棋派围棋社午休活动</li>
