--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
     <div id="toptitle">
         <h1>Huixuan Chi (迟慧璇)</h1>
     </div>
-    <!-- <table class="imgtable">
-        <tr>
-            <td>
-                <img src="self.jpg" alt="200px" width="200px" height="IMGLINKTARGET" />&nbsp;</td>
-            <td align="left"></td>
-        </tr>
-    </table> -->
+    
     <h2>个人简介</h2>
     <p>
         我是迟慧璇，一个AI从业者。目前我正在从事大语言模型（Large Language Model）相关的工作，感兴趣的方向包括：
@@ -43,6 +37,14 @@
 
         </li>
     </ul>
+    <table class="imgtable">
+        <tr>
+            <td>
+                <img src="self2.jpg" alt="200px" width="200px" height="IMGLINKTARGET" />
+            </td>
+            <!-- <td align="left">xxx</td> -->
+        </tr>
+    </table>
     <p>持续学习中，欢迎交流，共同进步</p>
 
     <h2>工作经历</h2>
