--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>大模型逻辑推理（LLM Reasoning）和主动检索（Active Retrieval）在RAG中的应用</p>
         </li>
         <li>
-            <p>大模型智能体（LLM Agent）</p>
+            <p>大模型推理和评测（LLM Evaluation）</p>
         </li>
         <li>
             <p><a href="https://github.com/ytchx1999" target="_blank">[我的Github]</a> | <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=mSLoo54AAAAJ" target="_blank">[我的谷歌学术]</a></p>
@@ -62,6 +62,9 @@
             </li>
             <li>
                 <p><a href="https://mp.weixin.qq.com/s/X8OHvD6TFz-HzzPTL3ApIA" target="_blank">理想同学APP</a>，RAG主动检索、反思模型</p>
+            </li>
+            <li>
+                <p>后训练通用/逻辑推理能力评测体系建设</p>
             </li>
         </ol>
     </ul>
