--- a/index.html
+++ b/index.html
@@ -129,17 +129,61 @@
         <li><a href="https://mp.weixin.qq.com/s/BLpuRcI6Zh9GvQA63456WA" target="_blank">第12届北京市大学生围棋联赛（甲组）</a></li>
         <li>第10届南北大学生围棋对抗赛（北方队）</li>
         <li>阿里棋派围棋社午休活动</li>
-        <li>鹅厂2025贺岁杯线上围棋交流赛</li>
+        <!-- <li>鹅厂2025贺岁杯线上围棋交流赛</li> -->
     </ul>
     <h3>过往比赛成绩</h3>
-    <ul>
+    <!-- <ul>
         <li><a href="https://mp.weixin.qq.com/s/gb3sEkQ6zj8aV6pqIPSHYA" target="_blank">第11届北京市大学生围棋联赛 - 乙组冠军（国科大队）</a></li>
         <li><a href="https://mp.weixin.qq.com/s/9Ijg-5zZ8LE8irs3FmoeOA" target="_blank">2024年“知行合弈杯”北溟围棋大会 - 公开组第4名</a></li>
         <li><a href="http://www.wqjh.net/info_Show.aspx?typeid=36&id=2331&newtype=2" target="_blank">2017年北京晚报“京北围棋杯”围棋选拔赛 - 第13名</a></li>
         <li><a href="http://www.cnypa.org/ttxw/976995.jhtml" target="_blank">第28届全国青少年宫“希望杯” 棋类比赛总决赛 - 甲组冠军</a></li>
         <li><a href="https://blog.sina.com.cn/s/blog_4fcb87620102v0nk.html" target="_blank">2014年山东省少年围棋锦标赛总决赛 - 甲组冠军</a></li>
         
-    </ul>
+    </ul> -->
+    <table>
+        <!-- <thead>
+            <tr>
+                <th align="center">比赛名称</th>
+                <th align="center">比赛时间</th>
+                <th align="center">比赛组别</th>
+                <th align="center">成绩</th>
+                <th align="center">比赛链接</th>
+            </tr>
+        </thead> -->
+        <tbody>
+            
+            <tr>
+                <td><a href="https://mp.weixin.qq.com/s/9Ijg-5zZ8LE8irs3FmoeOA" target="_blank">首届“知行合弈杯”北溟围棋大会</a></td>
+                <td>2024</td>
+                <td>公开组第4名</td>
+            </tr>
+            <tr>
+                <td><a href="https://mp.weixin.qq.com/s/qEuLiVrUtkPtvdD4F38nfw" target="_blank">北溟围棋俱乐部11月月赛</a></td>
+                <td>2024</td>
+                <td>第7名</td>
+            </tr>
+            <tr>
+                <td><a href="https://mp.weixin.qq.com/s/gb3sEkQ6zj8aV6pqIPSHYA" target="_blank">第11届北京市大学生围棋联赛</a></td>
+                <td>2023</td>
+                <td>乙组团体冠军</td>
+            </tr>
+            <tr>
+                <td><a href="http://www.wqjh.net/info_Show.aspx?typeid=36&id=2331&newtype=2" target="_blank">北京晚报“京北围棋杯”围棋选拔赛</a></td>
+                <td>2017</td>
+                <td>第13名</td>
+            </tr>
+            <tr>
+                <td><a href="http://www.cnypa.org/ttxw/976995.jhtml" target="_blank">第28届全国青少年宫“希望杯” 棋类比赛总决赛</a></td>
+                <td>2015</td>
+                <td>甲组冠军</td>
+            </tr>
+            <tr>
+                <td><a href="https://blog.sina.com.cn/s/blog_4fcb87620102v0nk.html" target="_blank">山东省少年围棋锦标赛总决赛</a></td>
+                <td>2014</td>
+                <td>甲组冠军</td>
+            </tr>
+        </tbody>
+    </table>
 
     <h2>联系方式</h2>
     <p>Phone: 133-6136-1876 <br>
