--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     
     <h2>个人简介</h2>
     <p>
-        我是迟慧璇，一个AI从业者。目前我正在从事大语言模型（Large Language Model）相关的工作，感兴趣的方向包括：
+        我是迟慧璇，一个AI从业者、围棋爱好者。目前我正在从事大语言模型（Large Language Model）相关的工作，感兴趣的方向包括：
     </p>
 
     <ul>
         <li>
-            <p>大模型后训练（LLM Post-training），近期 <a href="https://github.com/huggingface/open-r1" target="_blank">GRPO和DeepSeek-R1</a> 的复现工作 </p>
+            <p>大模型后训练（LLM Post-training），近期 <a href="https://github.com/huggingface/open-r1" target="_blank">DeepSeek-R1</a> 的复现工作 </p>
         </li>
         <li>
-            <p>大模型逻辑推理（LLM Reasoning）和主动检索（Active Retrieval）在RAG中的应用</p>
+            <p>大模型逻辑推理（LLM Reasoning）在RAG中的应用</p>
         </li>
         <li>
             <p>大模型推理和评测（LLM Evaluation）</p>
@@ -37,6 +37,7 @@
 
         </li>
     </ul>
+    <p>持续学习中，欢迎合作</p>
     <table class="imgtable">
         <tr>
             <td>
@@ -45,7 +46,7 @@
             <!-- <td align="left">xxx</td> -->
         </tr>
     </table>
-    <p>持续学习中，欢迎交流，共同进步</p>
+    
 
     <h2>工作经历</h2>
     <h3>理想汽车</h3>
@@ -118,7 +119,7 @@
 
 
     <h2>围棋人生</h2>
-    <p> 围棋业余5段，享受围棋的乐趣</p>
+    <p> 围棋业余5段，喜欢快乐地下棋，欢迎约棋</p>
     <ul>
         <li><a href="https://mp.weixin.qq.com/s/XinaQAw7jZSuRhvKvFterg" target="_blank">2025年2月北溟等级分</a></li>
     </ul>
