--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     </ul> -->
 
     <h2>工作经历</h2>
-    <!-- <h3>字节跳动</h3>
+    <h3>字节跳动</h3>
     <ul>
         <li>
             <p>资深风控算法工程师（2025.06 ~ 至今）</p>
         </li>
         <li>
-            <p>工作内容：TikTok广告账号风控、基于大模型的全机审应用</p>
+            <p>工作内容：TikTok广告风控、基于大模型的全机审实践</p>
         </li>
-    </ul> -->
+    </ul>
     <h3>理想汽车</h3>
     <ul>
         <li>
