--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>资深风控算法工程师（2025.06 ~ 至今）</p>
         </li>
         <li>
-            <p>工作内容：TikTok广告风控、基于大模型的全机审实践</p>
+            <p>工作内容：TikTok广告风控、LLM Post-training</p>
         </li>
     </ul>
     <h3>理想汽车</h3>
