--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </p>
     <ul>
         <li><p>目前我正在从事大语言模型（Large Language Model）应用和后训练相关的工作。</p></li>
+        <li><p>上学时就对除了教科书以外的所有事情感兴趣，喜欢尝试新鲜事物。</p></li>
         <li><p><a href="https://github.com/ytchx1999" target="_blank">[我的Github]</a> | <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=mSLoo54AAAAJ" target="_blank">[我的谷歌学术]</a></p></li>
         <li><p>持续学习中，欢迎合作</p></li>
     </ul>
@@ -53,7 +54,8 @@
     </table>
     <h2>近期动态</h2>
     <ul>
-        <li><p><a href="https://mp.weixin.qq.com/s/qyjBKIs1VgEYqqRY9chMfQ" target="_blank">2025山东省“海飞杯”业余围棋公开赛</a>，获得19/127的成绩（6胜3负）</p></li>
+        <li><p><a href="https://mp.weixin.qq.com/s/wJui41rLMJy07_yfG5tHFA" target="_blank">2026山东省“运河文化杯”业余围棋公开赛</a>，获得11/92的成绩</p></li>
+        <li><p><a href="https://mp.weixin.qq.com/s/DV_y1QclF74cpWhFxtWzZg" target="_blank">2025北溟围棋俱乐部11月月赛</a>，获得入神组亚军</p></li>
         
         
         <!-- <li><p><a href="https://mp.weixin.qq.com/s/-86AL01EUtSlFYCCBM5RjA" target="_blank">MindGPT3.0</a>上线了！理想同学APP和<a href="https://chat.livis.com/chat" target="_blank">PC端</a>，都可以体验反思重搜功能了（选择深度思考+联网搜索）</p></li>
@@ -69,7 +71,7 @@
             <p>资深风控算法工程师（2025.06 ~ 至今）</p>
         </li>
         <li>
-            <p>工作内容：TikTok广告风控、LLM Post-training</p>
+            <p>工作内容：TikTok广告风控、LLM Post-Train（SFT + RLVR）</p>
         </li>
     </ul>
     <h3>理想汽车</h3>
@@ -144,7 +146,7 @@
     <h2>围棋人生</h2>
     <p> 围棋业余5段，喜欢快乐地下棋，欢迎约棋</p>
     <ul>
-        <li><a href="https://mp.weixin.qq.com/s/XinaQAw7jZSuRhvKvFterg" target="_blank">2025年2月北溟等级分</a></li>
+        <li><a href="https://mp.weixin.qq.com/s/5qntLqN0agQHoNhzh1dleA" target="_blank">2026年1月北溟围棋等级分</a></li>
     </ul>
     <h3>近期围棋活动</h3>
     <ul>
@@ -176,6 +178,16 @@
         </thead> -->
         <tbody>
             <tr>
+                <td><a href="https://mp.weixin.qq.com/s/wJui41rLMJy07_yfG5tHFA" target="_blank">第三届山东省“运河文化杯”业余围棋公开赛</a></td>
+                <td>2026</td>
+                <td>公开组第11名</td>
+            </tr>
+            <tr>
+                <td><a href="https://mp.weixin.qq.com/s/qEuLiVrUtkPtvdD4F38nfw" target="_blank">北溟围棋俱乐部11月月赛</a></td>
+                <td>2025</td>
+                <td>入神组亚军</td>
+            </tr>
+            <tr>
                 <td><a href="https://mp.weixin.qq.com/s/9Ijg-5zZ8LE8irs3FmoeOA" target="_blank">第十一届山东省“海飞杯”业余围棋公开赛</a></td>
                 <td>2025</td>
                 <td>公开组第19名</td>
@@ -185,11 +197,11 @@
                 <td>2024</td>
                 <td>公开组第4名</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td><a href="https://mp.weixin.qq.com/s/qEuLiVrUtkPtvdD4F38nfw" target="_blank">北溟围棋俱乐部11月月赛</a></td>
                 <td>2024</td>
                 <td>第7名</td>
-            </tr>
+            </tr> -->
             <tr>
                 <td><a href="https://mp.weixin.qq.com/s/gb3sEkQ6zj8aV6pqIPSHYA" target="_blank">第11届北京市大学生围棋联赛</a></td>
                 <td>2023</td>
